--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-DISCORD_TOKEN=MTQwNzUwMzA2MTgwNjYxMjUyMQ.GueeDU.u5i4iQgDvSPf7sbcLiUVts_7f4kP6iRM4DePDw
-CLIENT_ID=1407503061806612521
-GUILD_ID=1405945522048471141
+DISCORD_TOKEN=YOUR_BOT_TOKEN_HERE
+CLIENT_ID=YOUR_APPLICATION_ID
+GUILD_ID=YOUR_SERVER_ID
 
-# Dashboard config
 DASHBOARD_PORT=3210
 DASHBOARD_HOST=0.0.0.0
-# simple bearer token for admin (put a long random string)
-DASHBOARD_TOKEN=
+DASHBOARD_TOKEN=CHANGE_ME_SUPER_SECRET
